checking for wrong moves

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jpa.hibernate.ddl-auto=create
 #logging.level.org.springframework=TRACE
 #logging.level.com=TRACE
 
-#debug=true
+debug=true
 #debug=false
