--- a/reacttt/package.json
+++ b/reacttt/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "admin-app",
-  "homepage": "https://licensesvc.trusted.ru/license/account",
+  "name": "TikTakToe",
+  "homepage": "https://localhost/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-global-state": "^0.1.2",
     "react-scripts": "^2.1.1"
   },
   "scripts": {
