--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
@@ -47,7 +47,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-build
+#build
 node_modules
 .idea
 npm-debug.log
