--- a/reacttt/.gitignore
+++ b/reacttt/.gitignore
@@ -9,7 +9,7 @@
 /coverage
 
 # production
-#/build
+/build
 
 # misc
 .DS_Store
@@ -22,7 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-#build
+build
 node_modules
 .idea
 npm-debug.log
