request added to react

--- a/reacttt/public/manifest.json
+++ b/reacttt/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "AdminApp",
-  "name": "Licenses AdminApp",
+  "short_name": "TikTacToe",
+  "name": "TikTacToe",
   "icons": [
     {
       "src": "favicon.ico",
